some home styling

--- a/src/app/colors.css
+++ b/src/app/colors.css
@@ -4,5 +4,5 @@
   --theme-primary: #0036ca;
   --theme-blue-1: rgb(40, 95, 220);
   --theme-blue-2: rgb(81, 151, 219);
-  --theme-text: #000000;
+  --theme-text: #19376d;
 }
