--- a/src/components/Avatar/avatar.module.css
+++ b/src/components/Avatar/avatar.module.css
@@ -3,5 +3,5 @@
   border-radius: 100%;
   border: 3px solid var(--theme-blue-1);
   user-select: none;
-  pointer-events: none;
+  transition: width var(--animation), height var(--animation);
 }
