--- a/src/components/Hero/Text/herotext.module.css
+++ b/src/components/Hero/Text/herotext.module.css
@@ -1,6 +1,7 @@
 .text {
-  padding: 2rem;
+  padding-bottom: 1rem;
   text-align: center;
   font-size: var(--text-largest);
   color: var(--theme-text);
+  margin: 0 auto;
 }
