--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,10 +25,15 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+.preload * {
+  transition: none !important;
 }
