--- a/src/components/Hero/Block/heroBlock.module.css
+++ b/src/components/Hero/Block/heroBlock.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   padding-top: 4rem;
-  transition: padding-top 0.5s ease-in-out;
+  transition: padding-top var(--animation);
   align-items: center;
   text-align: center;
 }
