--- a/src/mdx.module.css
+++ b/src/mdx.module.css
@@ -19,6 +19,14 @@
   font-size: 1.6rem;
 }
 
+.h4 {
+  font-size: 1.4rem;
+}
+
+.h5 {
+  font-size: 1.2rem;
+}
+
 .a {
   text-decoration: none;
   color: var(--theme-blue-2);
