add some image handling

--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -1,7 +1,7 @@
 .article {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 4rem 6rem 6rem 6rem;
+  padding: 8rem 6rem 6rem 6rem;
 }
 
 .back {
@@ -12,4 +12,17 @@
 
 .title {
   padding-top: 1rem;
+}
+
+.coverWrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 300px;
+  top: 0;
+  z-index: -1;
+}
+
+.coverWrapper img {
+  object-fit: cover;
 }
