--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -1,5 +1,9 @@
 .wrapper {
-  max-width: 700px;
+  max-width: 1000px;
   margin: 0 auto;
-  padding-top: 2rem;
+  padding: 2rem;
+  display: flex;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  flex-wrap: wrap;
 }
