--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -7,8 +7,12 @@
   --theme-yellow: #f6ae2d;
   --theme-dark: #272727;
   --theme-inverted-text: #e3e5f0;
+  --theme-transparent: rgba(0, 0, 0, 0);
 
   /* Theme animation */
   --animation: 0.5s ease-in-out;
   --animation-curve: cubic-bezier(0.2, 0.85, 0.45, 1.3);
+
+  /* Use-cases */
+  --theme-background: rgba(255, 255, 255, 1);
 }
