--- a/src/components/MDXEntryRow/mdxEntryRow.module.css
+++ b/src/components/MDXEntryRow/mdxEntryRow.module.css
@@ -1,5 +1,25 @@
 .wrapper {
-  padding: 2rem 0;
+  display: flex;
+  flex: 1 1 auto;
+  position: relative;
+  min-width: calc(33% - 1rem);
+  max-width: calc(33% - 1rem);
+}
+
+.imageParent {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  z-index: -1;
+}
+
+.imageParent img {
+  object-fit: cover;
+}
+
+.content {
+  margin-top: -50px;
+  padding: 1rem;
 }
 
 .a {
@@ -8,21 +28,19 @@
 }
 
 .h1 {
-  border-bottom: 1px solid var(--theme-blue-2);
-  padding-bottom: 0.2rem;
+  padding-bottom: 1rem;
 }
 
 .tags {
+  padding-top: 1rem;
   display: flex;
-  float: right;
   column-gap: 0.5rem;
 }
 
 .tag {
-  background: var(--theme-blue-2);
-  color: var(--theme-inverted-text);
-  padding: 0.1rem 0.6rem;
-  font-size: 0.8rem;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  color: var(--theme-blue-2);
+}
+
+.description {
+  line-height: 1.5rem;
 }
