--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -8,6 +8,7 @@
   --theme-dark: #272727;
   --theme-inverted-text: #e3e5f0;
   --theme-transparent: rgba(0, 0, 0, 0);
+  --code-background: #282a36;
 
   /* Theme animation */
   --animation: 0.5s ease-in-out;
@@ -15,4 +16,6 @@
 
   /* Use-cases */
   --theme-background: rgba(255, 255, 255, 1);
+  --theme-box-shadow-standard: 0px 0px 42px 1px rgba(0, 0, 0, 0.51);
+  --theme-box-shadow-small: 0px 0px 10px 1px rgba(0, 0, 0, 0.51);
 }
