--- a/src/components/MainNavigation/navigation.module.css
+++ b/src/components/MainNavigation/navigation.module.css
@@ -11,7 +11,7 @@
   bottom: 1rem;
   z-index: -1;
   border-radius: 2rem;
-  box-shadow: 0px 0px 42px 1px rgba(0, 0, 0, 0.51);
+  box-shadow: var(--theme-box-shadow-standard);
 }
 
 .avatarBubble {
@@ -23,7 +23,7 @@
   bottom: -1rem;
   z-index: -1;
   border-radius: 100%;
-  box-shadow: 0px 0px 42px 1px rgba(0, 0, 0, 0.51);
+  box-shadow: var(--theme-box-shadow-standard);
 }
 
 .avatarBubble::before {
