--- a/src/app/blog/[slug]/blogPost.module.css
+++ b/src/app/blog/[slug]/blogPost.module.css
@@ -1,13 +1,19 @@
 .article {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 14rem 6rem 6rem 6rem;
+  padding: 16rem 6rem 6rem 6rem;
 }
 
 .back {
   font-size: 0.9rem;
   text-decoration: none;
-  color: var(--theme-blue-2);
+  color: var(--theme-blue-3);
+  opacity: 0.7;
+  transition: opacity var(--animation);
+}
+
+.back:hover {
+  opacity: 1;
 }
 
 .title {
