--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -9,13 +9,14 @@
   --theme-inverted-text: #e3e5f0;
   --theme-transparent: rgba(0, 0, 0, 0);
   --code-background: #282a36;
-
+  --shadow-color: rgba(0, 0, 0, 0.51);
+  /* rgba(255, 255, 255, 1); */
   /* Theme animation */
   --animation: 0.5s ease-in-out;
   --animation-curve: cubic-bezier(0.2, 0.85, 0.45, 1.3);
 
   /* Use-cases */
   --theme-background: rgba(255, 255, 255, 1);
-  --theme-box-shadow-standard: 0px 0px 42px 1px rgba(0, 0, 0, 0.51);
-  --theme-box-shadow-small: 0px 0px 10px 1px rgba(0, 0, 0, 0.51);
+  --theme-box-shadow-standard: 0px 0px 42px 1px var(--shadow-color);
+  --theme-box-shadow-small: 0px 0px 100px 0px rgba(226, 226, 226, 0.5);
 }
