--- a/src/components/MDXEntryRow/mdxEntryRow.module.css
+++ b/src/components/MDXEntryRow/mdxEntryRow.module.css
@@ -8,6 +8,8 @@
   box-shadow: var(--theme-box-shadow-small);
   border-radius: 1rem;
   overflow: hidden;
+  background: var(--theme-background);
+  z-index: 99;
 }
 
 @media only screen and (max-width: 900px) {
