--- a/src/components/Hero/Block/heroBlock.module.css
+++ b/src/components/Hero/Block/heroBlock.module.css
@@ -5,11 +5,19 @@
   transition: padding-top var(--animation);
   align-items: center;
   text-align: center;
+  overflow: hidden;
+  height: 16rem;
+  transition: height var(--animation);
 }
 
 .small {
   padding-top: 2rem;
   position: sticky;
-  top: 0;
+  top: -2rem;
   z-index: 100;
+  height: 12rem;
+}
+
+.collapse {
+  height: unset;
 }
