--- a/src/components/MainNavigation/navigation.module.css
+++ b/src/components/MainNavigation/navigation.module.css
@@ -4,7 +4,8 @@
 
 .navigationBubble {
   position: absolute;
-  background-color: transparent;
+  opacity: 0;
+  background-color: var(--theme-background);
   left: -6rem;
   right: -6rem;
   top: 1rem;
@@ -12,12 +13,13 @@
   z-index: -1;
   border-radius: 2rem;
   box-shadow: none;
-  transition: all 0s;
+  transition: opacity var(--animation) 0s;
 }
 
 .avatarBubble {
   position: absolute;
-  background-color: transparent;
+  opacity: 0;
+  background-color: var(--theme-background);
   left: -1rem;
   right: -1rem;
   top: -1rem;
@@ -25,11 +27,12 @@
   z-index: -1;
   border-radius: 100%;
   box-shadow: none;
-  transition: all 0s;
+  transition: opacity var(--animation) 0s;
 }
 
 .avatarBubble::before {
-  background-color: transparent;
+  opacity: 0;
+  background-color: var(--theme-background);
   display: block;
   content: ".";
   font-size: 0;
@@ -47,14 +50,12 @@
 }
 
 .shadow {
-  background-color: var(--theme-background);
+  opacity: 1;
   box-shadow: var(--theme-box-shadow-standard);
-  transition: all var(--animation);
-  transition-delay: 0.3s;
+  transition: opacity var(--animation) 0.3s;
 }
 
 .shadow:before {
-  background-color: var(--theme-background);
-  transition: all var(--animation);
-  transition-delay: 0.6s;
+  opacity: 1;
+  transition: opacity var(--animation) 0.6s;
 }
