add mechanism for injecting CSS variables

--- a/src/components/Social/social.module.css
+++ b/src/components/Social/social.module.css
@@ -15,6 +15,10 @@
   transition: all 0.2s;
 }
 
+:global(body.dark) .icon path {
+  color: var(--darkColor);
+}
+
 .icon:hover {
   transform: scale(1.2);
   filter: saturate(130%);
