--- a/src/components/Post/Image/image.module.css
+++ b/src/components/Post/Image/image.module.css
@@ -4,8 +4,17 @@
   width: 100%;
   height: 30rem;
   z-index: 0;
+  margin: 1rem 0;
+}
+
+.short {
+  height: 20rem;
 }
 
 .imageParent img {
   object-fit: contain;
+}
+
+.vertical {
+  height: 50rem;
 }
