--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 4rem 2rem;
   display: flex;
@@ -11,4 +11,6 @@
 .bodyText {
   margin-top: 4rem;
   font-weight: 700;
+  position: relative;
+  z-index: 1;
 }
