--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -26,11 +26,11 @@ body.dark {
   --theme-blue-0: #00465f;
   --theme-blue-1: #4bb9e5;
   --theme-blue-2: #86c0fb;
-  --theme-blue-3: #8cb4da;
+  --theme-blue-3: #6495c3;
   --theme-text: #d0d6e3;
   --theme-yellow: #f6ae2d;
   --theme-dark: #272727;
-  --theme-inverted-text: #e3e5f0;
+  --theme-inverted-text: #19376d;
   --theme-transparent: rgba(0, 0, 0, 0);
   --code-background: #282a36;
   --shadow-color: #2e2e47;
