--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@ html,
 body {
   max-width: 100vw;
   background-color: var(--theme-background);
+  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .preload * {
