add some better scroll behavior

--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -1,17 +1,21 @@
 :root {
+  /* Static colors */
+  --theme-dark-blue: #19376d;
+  --theme-off-white: #e3e5f0;
+
   /* Theme colors */
   --theme-blue-0: #d3e9f1;
   --theme-blue-1: #87ceeb;
   --theme-blue-2: #1e90ff;
   --theme-blue-3: #000080;
-  --theme-text: #19376d;
+  --theme-text: var(--theme-dark-blue);
   --theme-yellow: #f6ae2d;
   --theme-dark: #272727;
-  --theme-inverted-text: #e3e5f0;
+  --theme-inverted-text: var(--theme-off-white);
   --theme-transparent: rgba(0, 0, 0, 0);
   --code-background: #282a36;
   --shadow-color: rgb(164, 164, 164);
-  /* rgba(255, 255, 255, 1); */
+
   /* Theme animation */
   --animation: 0.5s ease-in-out;
   --animation-curve: cubic-bezier(0.2, 0.85, 0.45, 1.3);
