--- a/src/components/Background/background.module.css
+++ b/src/components/Background/background.module.css
@@ -4,11 +4,7 @@
   height: 100%;
   position: absolute;
   opacity: 0;
-  background: linear-gradient(
-    180deg,
-    var(--theme-blue-0) 0%,
-    var(--theme-transparent) 85%
-  );
+  background: var(--theme-background-gradient);
   z-index: 0;
   transition: opacity var(--animation);
   top: 0;
