--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -20,6 +20,7 @@
 .inner {
   background: var(--theme-background);
   width: 80%;
+  max-width: 900px;
   margin: 0 auto;
   margin-top: 5rem;
   margin-bottom: 2rem;
@@ -27,6 +28,13 @@
   top: 100vh;
   transition: top var(--animation);
   transition-delay: 10ms;
+}
+
+@media only screen and (max-width: 700px) {
+  .inner {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 .inner.fadeIn {
