--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -25,8 +25,8 @@
   margin-top: 5rem;
   margin-bottom: 2rem;
   position: relative;
-  top: 100vh;
-  transition: top var(--animation);
+  transform: translateY(100vh);
+  transition: transform var(--animation);
   transition-delay: 10ms;
 }
 
@@ -38,5 +38,5 @@
 }
 
 .inner.fadeIn {
-  top: 0;
+  transform: translateY(0);
 }
