--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -40,3 +40,30 @@
 .inner.fadeIn {
   transform: translateY(0);
 }
+
+.backButton {
+  position: absolute;
+  z-index: 9;
+  padding: 1rem 1.5rem;
+  background: var(--theme-text);
+  opacity: 1;
+  color: var(--theme-inverted-text);
+  border-bottom-right-radius: 2rem;
+}
+
+.popOutButton {
+  position: absolute;
+  z-index: 9;
+  right: 0;
+  padding: 1rem 1.5rem;
+  background: var(--theme-text);
+  opacity: 1;
+  color: var(--theme-inverted-text);
+  border-bottom-left-radius: 2rem;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
+.popOutButton svg {
+  margin-left: 0.3rem;
+}
