--- a/src/components/Post/Paragraph/p.module.css
+++ b/src/components/Post/Paragraph/p.module.css
@@ -6,9 +6,13 @@
 
 .p code {
   background-color: var(--code-background);
-  color: var(--theme-inverted-text);
+  color: var(--code-color);
   padding: 0.1rem 0.3rem;
   box-shadow: var(--theme-box-shadow-tiny);
   border-radius: 5px;
   opacity: 0.7;
+}
+
+:global(body.dark) .p code {
+  opacity: 0.8;
 }
