--- a/src/components/Post/Li/li.module.css
+++ b/src/components/Post/Li/li.module.css
@@ -1,7 +1,19 @@
 .li {
-  padding-top: 0.5rem;
+  padding-top: 0.7rem;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
 }
 
 .li::marker {
   font-size: 1.1em;
+}
+
+.li code {
+  background-color: var(--code-background);
+  color: var(--code-color);
+  padding: 0.1rem 0.3rem;
+  box-shadow: var(--theme-box-shadow-tiny);
+  border-radius: 5px;
+  opacity: 0.7;
+  font-size: 1rem;
 }
