--- a/src/components/Post/Paragraph/p.module.css
+++ b/src/components/Post/Paragraph/p.module.css
@@ -11,6 +11,7 @@
   box-shadow: var(--theme-box-shadow-tiny);
   border-radius: 5px;
   opacity: 0.7;
+  font-size: 1rem;
 }
 
 :global(body.dark) .p code {
