--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -26,8 +26,9 @@
   margin-bottom: 2rem;
   position: relative;
   transform: translateY(100vh);
-  transition: transform var(--animation);
+  transition: transform var(--animation), opacity var(--animation);
   transition-delay: 10ms;
+  opacity: 0;
 }
 
 @media only screen and (max-width: 700px) {
@@ -39,6 +40,7 @@
 
 .inner.fadeIn {
   transform: translateY(0);
+  opacity: 1;
 }
 
 .backButton {
