--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -1,13 +1,18 @@
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 4rem 2rem;
+  padding: 4rem 0 4rem 2rem;
   display: flex;
   column-gap: 1rem;
   row-gap: 1rem;
   flex-wrap: wrap;
 }
 
+@media only screen and (max-width: 550px) {
+  .wrapper {
+    row-gap: 0;
+  }
+}
 .bodyText.bodyText {
   margin-top: 1rem;
   position: relative;
