--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -19,8 +19,8 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
-  min-width: 33%;
-  max-width: 33%;
+  min-width: calc(33% - 2rem);
+  max-width: calc(33% - 2rem);
 }
 
 .column a {
