--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -3,16 +3,18 @@
   color: var(--theme-inverted-text);
   display: flex;
   margin-top: 5rem;
+  flex-direction: column;
 }
 
 .content {
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
   flex-grow: 1;
   padding: 4rem 2rem;
   display: flex;
   flex-direction: row;
   column-gap: 2rem;
+  width: 100%;
 }
 
 .column {
@@ -34,4 +36,16 @@
   margin-left: -1rem;
   padding-left: 1rem;
   border-left: 1px solid var(--theme-inverted-text);
+}
+
+.avatar.avatar {
+  margin-left: auto;
+}
+
+.copyright {
+  text-align: center;
+  font-size: 0.9rem;
+  margin-top: auto;
+  padding-bottom: 1rem;
+  opacity: 0.7;
 }
