--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -6,8 +6,7 @@
   bottom: 0;
   z-index: 999999;
   overflow-y: scroll;
-  transition: background-color var(--animation),
-    backdrop-filter var(--animation);
+  transition: background-color var(--animation);
 }
 
 .wrapper.fadeIn {
